comments added in .js and .css file

--- a/app.css
+++ b/app.css
@@ -206,7 +206,7 @@ header .navbar a{
         width: 50%;
     }
 }
-    
+/*------------- Media query for small devices and dropdown navbar -------------------*/
 @media(max-width:768px){
     .hamburger{
         display: block;
